# podracer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.toml  pyproject.toml
.credentials/: example
.github/workflows/: ci.yml
deploy/: config.toml.template
deploy/systemd/: podracer-web.service  podracer-worker.service
docs/: README.md  TODO.md  configuration.md  roadmap.md  whisper-service.md
docs/plans/: 2026-04-10-summarization.md  2026-04-23-inference-backends.md  2026-04-24-summarization-eval-results.md  2026-05-12-systemd-daemon.md  2026-05-12-whisper-service.md  2026-05-18-deepgram-backend.md  2026-05-23-nested-chapters.md  2026-05-23-richer-chapter-summaries.md  2026-06-12-llm-output-quality-guards.md  2026-06-15-home-feed.md  2026-06-15-podcast-art.md  2026-06-22-rest-api.md  2026-06-22-summary-coverage-fixes.md  2026-06-24-digest-page.md  overview.md  podcast-search-download.md  summarization-cli-eval.md  transcription-eval.md  web-ui.md
podracer/: __init__.py  artwork.py  cli.py  config.py  db.py  digest.py  download.py  feed.py  logging_config.py  models.py  process.py  sd_notify.py  search.py  sentry_config.py  summarize.py  summarize_cli.py  transcribe.py  worker.py
podracer/db/: __init__.py  connection.py  digests.py  episodes.py  jobs.py  podcasts.py  summaries.py  transcripts.py
podracer/web/: app.py  deps.py
podracer/web/routes/: api.py  digests.py  episodes.py  feed.py  health.py  jobs.py  podcasts.py  search.py
podracer/web/static/: style.css
podracer/web/templates/: base.html  error.html
podracer/web/templates/digests/: detail.html  list.html
podracer/web/templates/episodes/: detail.html
podracer/web/templates/feed/: list.html
podracer/web/templates/jobs/: list.html
podracer/web/templates/podcasts/: detail.html  list.html
podracer/web/templates/search/: _results.html  browse.html  form.html
podracer/whisper_service/: __main__.py  app.py  routes.py  runner.py  state.py
scripts/: install-systemd-user.sh  setup.sh
tests/: conftest.py  test_api.py  test_artifact_saves.py  test_auto_queue.py  test_chapter_enrichment.py  test_chapter_nesting.py  test_digest.py  test_download.py  test_feed.py  test_feed_categories.py  test_feed_fetch.py  test_health.py  test_job_actions.py  test_jobs.py  test_llm_token_logging.py  test_logging.py  test_output_quality_guards.py  test_process_redownload.py  test_resummarize.py  test_sd_notify.py  test_sentry.py  test_subscription.py  test_url_validation.py  test_worker_sync.py
