[project]
name = "podracer"
version = "0.1.0"
description = "Audio transcription with diarization using whisperX"
requires-python = ">=3.10,<3.14"
dependencies = [
    "whisperx>=3.1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.scripts]
transcribe = "podracer.transcribe:main"
summarize = "podracer.summarize_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
