[project]
name = "podracer"
version = "0.1.0"
description = "Local-first podcast knowledge platform"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "tenacity>=8.0",
    "deepgram-sdk>=3.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Local whisperx transcription service. Required on the GPU host that runs
# `python -m podracer.whisper_service`. The main podracer install does NOT
# pull torch/whisperx so it stays slim on CPU-only deployments.
whisper = [
    "whisperx>=3.1.0",
]

# Test runner + utilities. Install via `uv sync --extra dev`.
dev = [
    "pytest>=8",
]

[project.scripts]
podracer = "podracer.cli:main"
podracer-whisper = "podracer.whisper_service.__main__:main"
transcribe = "podracer.transcribe:main"
summarize = "podracer.summarize_cli:main"

[tool.ruff]
target-version = "py312"
line-length = 120
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "PLC0415"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q"

[tool.ty.environment]
python-version = "3.12"

[[tool.ty.overrides]]
include = ["podracer/whisper_service/runner.py"]

[tool.ty.overrides.rules]
invalid-assignment = "ignore"
unknown-argument = "ignore"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
